# gbonds-pkg

./: .cvsignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.in  gbonds.spec  gbonds.spec.in
data/: .cvsignore  Makefile.am  Makefile.in  download-sites.xml  gbonds.applications  gbonds.desktop.in  gbonds.keys.in  gbonds.mime  gbonds.xml.in  sb199205.asc  sb199211.asc  sb199305.asc  sb199309.asc  sb199405.asc  sb199411.asc  sb199505.asc  sb199511.asc  sb199605.asc  sb199611.asc  sb199705.asc  sb199711.asc  sb199803.asc  sb199809.asc  sb199903.asc  sb199909.asc  sb200003.asc  sb200009.asc  sb200103.asc  sb200203.asc  sb200206.asc  sb200212.asc  sb200306.asc  sb200311.asc  sb200406.asc  sb200412.asc  sb200506.asc  sb200512.asc  sb200606.asc  sb200612.asc  sb200706.asc  (+3 more)
debian/: .cvsignore  .gitignore  README.Debian  changelog  control  copyright  gbonds-data.install  gbonds.1  gbonds.lintian-overrides  gbonds.manpages  gbonds.postinst  gbonds.postrm  gbp.conf  rules  sb200906.asc  sb200912.asc  sb201006.asc  sb201012.asc  sb201106.asc  sb201112.asc  sb201206.asc  sb201212.asc  sb201306.asc  sb201312.asc  sb201406.asc  sb201412.asc  sb201506.asc  sb201512.asc  sb201606.asc  sb201612.asc  sb201706.asc  sb201712.asc  sb201806.asc  sb201812.asc  watch
debian/patches/: 00list  01_data_Makefile_am.dpatch  POTFILES  POTFILES.missing  commands-compile  configure-compiler-warnings  copyright-update  debian-changes-2.0.3-1  desktop-file  desktop-file-keywords  download-sites  egg-recent-model-compile  fix-math-linkage  gbonds-name-case  gsettings-port  gtk3-port  libgnomeprint  link-libm  no-rarian-compat  omf  replace-g_strcasecmp  sb200506.dpatch  sb200512.dpatch  sb200606.dpatch  sb200612.dpatch  series  website-url  xmldocs
debian/source/: lintian-overrides
help/: Makefile.in
help/C/: .cvsignore  Makefile.am  Makefile.in  gbonds-C.omf  gbonds-C.omf.out  gbonds.xml
pixmaps/: Makefile.am  Makefile.in
po/: .cvsignore  POTFILES.in  gbonds.pot
src/: .cvsignore  Makefile.am  Makefile.in  commands.c  commands.h  debug.c  debug.h  doc-sbw.c  doc-sbw.h  doc-xml.c  doc-xml.h  doc.c  doc.h  edit.c  edit.h  file.c  file.h  gbonds-ui.xml  gbonds.c  hig.c  hig.h  marshal.c  marshal.h  prefs-dialog.c  prefs-dialog.h  prefs.c  prefs.h  print-dialog.c  print-dialog.h  print.c  print.h  recent.c  recent.h  rules.c  rules.h  sbw4.h  splash.c  splash.h  table-model.c  table-model.h  (+14 more)
src/recent-files/: Makefile.am  Makefile.in
