## Process this file with automake to produce Makefile.in

SUBDIRS = po src pixmaps help data

EXTRA_DIST = \
	README \
	COPYING \
	COPYING-DOCS \
	AUTHORS \
	ChangeLog \
	INSTALL \
	NEWS \
	TODO \
	ABOUT-NLS \
	intltool-extract.in \
	intltool-merge.in \
	intltool-update.in \
	gbonds.spec \
	gbonds.spec.in


