## Process this file with automake to produce Makefile.in

gbonds_pixmapsdir = $(datadir)/pixmaps/gbonds

gbonds_pixmaps_DATA = \
	gbonds_logo.png


gbonds_app_icondir = $(datadir)/pixmaps

gbonds_app_icon_DATA = \
	gbonds.png


gbonds_mime_icondir = $(datadir)/pixmaps

gbonds_mime_icon_DATA = \
	gbonds-application-x-gbonds.png


EXTRA_DIST = $(gbonds_pixmaps_DATA)   \
	     $(gbonds_app_icon_DATA)  \
	     $(gbonds_mime_icon_DATA)
